feat(api): Change deploy api field name (#17)
